# poclfmtts

./: .gitignore  main.py  pyproject.toml
docs/: lfm2-backbone-feasibility.md
docs/superpowers/specs/: 2026-06-02-pocketlfm-backbone-design.md
notebooks/: kaggle_train.ipynb  kaggle_train2.ipynb
scripts/: bench_rtf.py  cpu_demo.py  data_ljspeech.py  distill.py  infer.py  test_pocketlfm.py  train.py  tts.py
scripts2/: bench2.py  build_corpus.py  infer2.py  train2.py  upload_kaggle.sh
src/pocketlfm/: __init__.py  pocketlfm.py  pocketlfm2.py
