[project]
name = "epockettts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=2.2.0",
    "liquid-audio[demo]>=1.2.0",
    "pocket-tts>=2.1.0",
    "torch>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocketlfm"]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["scripts"]
